# Rabbitmq-Messaging

./: CMakeLists.txt  main.cpp  program1.cpp
Program1/: CMakeLists.txt  program1.cpp
Program2/: CMakeLists.txt  program2.cpp
Program3/: CMakeLists.txt  program3.cpp
